<?xml version="1.0"?>
<package format="3">
  <name>luci_third_party</name>
  <version>1.1.0</version>
  <description>A packages to host all opensource contributions</description>

  <maintainer email="christian@luci.com">christian</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
